syntax = "proto3";

package items.v1;

import "validate/validate.proto";

message Item {
  string id = 1 [(validate.rules).string = {uuid: true, ignore_empty: true}];
  string name = 2;
  string description = 3;
  float unit_price = 4 [(validate.rules).float.gte = 0];
}

service Items {
  rpc Create (CreateItemRequest) returns (CreateItemResponse);
  rpc Filter (FilterItemRequest) returns (FilterItemResponse);
  rpc List (ListItemRequest) returns (ListItemResponse);
  rpc Find (FindItemRequest) returns (FindItemResponse);
  rpc Update (UpdateItemRequest) returns (UpdateItemResponse);
  rpc Delete (DeleteItemRequest) returns (DeleteItemResponse);
}

message CreateItemRequest {
  Item item = 1 [(validate.rules).message.required = true];
}
message CreateItemResponse {
  Item item = 1;
}

message UpdateItemRequest {
  Item item = 1;
}
message UpdateItemResponse {
  Item item = 1;
}
message DeleteItemRequest {
  string id = 1 [(validate.rules).string.uuid = true];
}
message DeleteItemResponse {}
message ListItemRequest {}
message ListItemResponse {
  repeated Item items = 1;
}
message FindItemRequest {
  string id = 1[(validate.rules).string.uuid = true];
}
message FindItemResponse {
  Item item = 1;
}

message FilterItemRequest {
  repeated string ids = 1 [(validate.rules).repeated.items.string.uuid = true];
}
message FilterItemResponse {
  repeated Item items = 1;
}